# serde-stacker

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: de.rs  lib.rs  param.rs  ser.rs
tests/: test.rs
