[package]
name = "serde_stacker"
version = "0.1.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Serde adapter that avoids stack overflow by dynamically growing the stack"
repository = "https://github.com/dtolnay/serde-stacker"
documentation = "https://docs.rs/serde_stacker"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0"
stacker = "0.1"

[dev-dependencies]
serde_json = { version = "1.0.38", features = ["unbounded_depth"] }
